return AlbumItem from album details route
previously, AlbumItems that were not Assets were just ignored
