# server/core/src/model/repository/db_entity/mod.rs
@@ -6,6 +6,7 @@ mod data_dir;
 mod failed_job;
 mod representation;
 mod timeline_group;
+mod album_item;
 
 pub use album::*;
 pub use asset::*;
@@ -15,3 +16,4 @@ pub use data_dir::*;
 pub use failed_job::*;
 pub use representation::*;
 pub use timeline_group::*;
+pub use album_item::*;
